// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.admin.v0;

import "com/digitalasset/canton/health/admin/v0/status_service.proto";
import "com/digitalasset/canton/health/admin/v1/status_service.proto";

service SequencerStatusService {
  rpc SequencerStatus(SequencerStatusRequest) returns (SequencerStatusResponse);
}

message SequencerStatusRequest {}

message SequencerStatusResponse {
  oneof kind {
    SequencerStatusResponseStatus status = 1;
    com.digitalasset.canton.health.admin.v0.NodeStatus.NotInitialized unavailable = 2;
    com.digitalasset.canton.health.admin.v1.Failure failure = 3;
  }

  message SequencerStatusResponseStatus {
    com.digitalasset.canton.health.admin.v1.Status common_status = 1;

    repeated string connected_participants_uid = 2;
    repeated string connected_mediators_uid = 7;

    // required - status of the sequencer component it is running
    com.digitalasset.canton.health.admin.v0.SequencerHealthStatus sequencer = 3;

    string domain_id = 4;

    com.digitalasset.canton.health.admin.v0.SequencerAdminStatus admin = 5;

    int32 protocol_version = 6;
  }
}
